--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 
                             today = mm + '-' + dd + '-' + yyyy;
                             document.write(today);
-                        </script></h1>
+                        </script> Sampai 2 Hari Sebelumnya</h1>
                         <section class="content">
                             <div class="container-fluid">
                                 <div class="row">
                                     <div class="col-md-12">    
                                         <div class="card">
                                             <div class="card-header">
-                                                <h5 class="card-title">Lalu Lintas Hari Ini</h5>
+                                                <h5 class="card-title">Lalu Lintas Hari Ini Sampai 2 Hari Sebelumnya</h5>
                                             </div>
                                             <div class="card-body">
                                                 <div class="table-responsive">
