--- a/lalulintas.html
+++ b/lalulintas.html
@@ -36,7 +36,7 @@
 
                             today = mm + '-' + dd + '-' + yyyy;
                             document.write(today);
-                        </script></h1>
+                        </script> Sampai 2 Hari Sebelumnya</h1>
                         <div class="table-responsive">
                             <div class="table-responsive">
                                 <table class="table table-striped table-sm">
@@ -64,7 +64,7 @@
 
                             today = mm + '-' + dd + '-' + yyyy;
                             document.write(today);
-                        </script></h1>
+                        </script> Sampai 2 Hari Sebelumnya</h1>
                         <div class="table-responsive">
                             <div class="table-responsive">
                                 <table class="table table-striped table-sm">
